--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@ body {
     width: 50rem;
     padding: 5rem 0 5rem 0;
     padding: 70px;
+    
 }
 .container header {
     display: flex;
@@ -56,13 +57,11 @@ body {
   border: 1px solid #ccc;
   text-align: center;
 }
-.container header input {
-    position: absolute;
+.container input {
     padding: 10px;
-    top: 0;
-    margin: 2rem 0 0 40rem;
     border: none;
     border-radius: 16px;
+    margin: 30px 0 0 0;
 }
 
 
